# glennergy_ESP32_client

./: CMakeLists.txt
main/: CMakeLists.txt  main.c
main/src/alarms/: alarm_manager.c  alarm_manager.h
main/src/communication/: leop_client.c  leop_client.cpp  leop_client.h  leop_client.hpp  wifi_manager.c
main/src/diagnostics/: uart_console.c  uart_console.cpp  uart_console.h  uart_console.hpp
main/src/hal/: hardware_abstraction.c  hardware_abstraction.h
main/src/sensors/: bme280_sensor.c  bme280_sensor.cpp  bme280_sensor.h  bme280_sensor.hpp
main/src/storage/: nvs_cache.c  nvs_cache.h  sensor_logger.c  sensor_logger.h
main/src/system/: watchdog_manager.c  watchdog_manager.h
main/src/ui/: display_manager.c  display_manager.h
